# hextol

./: 404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
API/: index.html
assets/readme/: index.html
demo/: index.html
docs/: API.md  demo.md  index.md
search/: search_index.json
src/hextol/: __init__.py  cluster.py  compare.py  convert.py  distance.py  extract.py  gradient.py  gui.py
tests/: test_cluster.py  test_compare.py  test_convert.py  test_distance.py  test_extract.py  test_gradient.py  test_gui.py  test_hextol.py
