[build-system]
requires = ["uv_build >= 0.9.21, <0.10.0"]
build-backend = "uv_build"

[project]
name = "hextol"
version = "0.2.0"
description = "Hexadecimal comparison utilities"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []
authors = [
    { name = "MLMecham", email = "mechamit000@gmail.com" },
]
maintainers = [
    { name = "MLMecham", email = "mechamit000@gmail.com" },
]

[project.urls]
Homepage = "https://mlmecham.github.io/hextol"
Repository = "https://github.com/MLMecham/hextol"

[project.optional-dependencies]
extract = [
    "numpy>=1.24",
    "Pillow>=10.0",
]
all = [
    "numpy>=1.24",
    "Pillow>=10.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "numpy",  # core stays zero-dep — dev installs these to test extract and duck-typing
    "Pillow",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]

[tool.ruff]
line-length = 100
target-version = "py310"
